进行了一个转换测试
如果此提交新增的内容导致无法用预编译版的UE4打开
请及时反馈

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,17 +4,17 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+EditorStartupMap=/Game/Maps/MainMap.MainMap
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/Game/Maps/LocMap.LocMap
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
-ServerDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/Maps/LocMap.LocMap
+ServerDefaultMap=/Game/Maps/MainMap.MainMap
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
