--- a/VirtualTHO.uproject
+++ b/VirtualTHO.uproject
@@ -2,5 +2,12 @@
 	"FileVersion": 3,
 	"EngineAssociation": "4.27",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Modules": [
+		{
+			"Name": "VirtualTHO",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		}
+	]
 }
