提交服务器测试版本

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,8 +14,8 @@ FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/LocMap.LocMap
-ServerDefaultMap=/Game/Maps/MainMap.MainMap
-GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
+ServerDefaultMap=/Game/Test/MAP_test.MAP_test
+GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
