--- a/VirtualTHO.uproject
+++ b/VirtualTHO.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.27",
+	"EngineAssociation": "{C8D38759-4D24-0772-C5E1-DF83F6338270}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
